--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -12,20 +11,15 @@
 
     <description>Builds, tests, and runs the project airlines.</description>
 
-    <!-- Add project dependencies here (if any) -->
-    <!-- Example:
-    <dependencies>
-        <dependency>
-            <groupId>com.example</groupId>
-            <artifactId>dependency1</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-    </dependencies>
-    -->
+    <properties>
+        <source.dir>src</source.dir>
+        <build.dir>build</build.dir>
+        <dist.dir>dist</dist.dir>
+    </properties>
 
-    <!-- Add build plugins here (if any) -->
-    <!-- Example:
     <build>
+        <sourceDirectory>${source.dir}</sourceDirectory>
+        <outputDirectory>${build.dir}/classes</outputDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -36,10 +30,19 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.example.MainClass</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
-    -->
-
-    <!-- Other configurations and customizations can be added here as needed -->
-
 </project>
+
